--- a/FileTransfer.Console/FileTransfer.Console.csproj
+++ b/FileTransfer.Console/FileTransfer.Console.csproj
@@ -4,10 +4,12 @@
 		<OutputType>Exe</OutputType>
 		<TargetFramework>net6.0</TargetFramework>
 		<Nullable>enable</Nullable>
+		<DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
 	</PropertyGroup>
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
+		<PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.11.1" />
 		<PackageReference Include="Serilog.Extensions.Hosting" Version="4.1.2" />
 		<PackageReference Include="Serilog.Settings.Configuration" Version="3.2.0" />
 		<PackageReference Include="Serilog.Sinks.Console" Version="4.0.0" />
