practice string split in c#

--- a/FileTransfer.Xunit/FileTransfer.Xunit.csproj
+++ b/FileTransfer.Xunit/FileTransfer.Xunit.csproj
@@ -24,6 +24,7 @@
   <ItemGroup>
     <ProjectReference Include="..\FileTransfer.Console\FileTransfer.Console.csproj" />
     <ProjectReference Include="..\FileTransfer.Persistence\FileTransfer.Persistence.csproj" />
+    <ProjectReference Include="..\FileTransfer.StringManipulation\FileTransfer.StringManipulation.csproj" />
   </ItemGroup>
 
 </Project>
